# K-Means_Secuencial

./: CMakeLists.txt  ColoredPoints.cpp  dataSet_Test.txt
